<resources>
    <string name="app_name">QuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_account">Don\'t you have an account yet?</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="default_web_client_id">782645959057-aal1188lrucafqp7pbqepmhqi2lb2rc3.apps.googleusercontent.com</string>
</resources>